Refactor WSDL parser: simplify field initialization, streamline list handling, and enhance readability
- Replaced `get(0)` with `getFirst()` for better semantics in child node initialization.
- Made `imports` and `includes` lists final in `Schema` for immutability.
- Simplified stream operations with method references in `Definitions`.
- Removed unused `addSoapVersion` method and redundant test logic.